[package]
name = "rust-esp"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.24", default-features = false, features = ["glow"] }
egui = "0.24"
windows = { version = "0.52", features = [
    "Win32_System_Threading",
    "Win32_System_Process",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
glam = "0.24"
